testsuite/tests/quantified-constraints/T19921.stderr
T19921.hs:29:8: error: [GHC-05617]
    • Could not solve: ‘((x \/ y) \/ z) ⇒ (x \/ (y \/ z))’
        arising from a use of ‘Dict’
    • In the expression: Dict
      In an equation for ‘dict’: dict = Dict

